tests/fixtures/bad/audit-logs-secret.ax
app AuditLogsSecret
  intent:
    demonstrate missing audit secrecy rule

actor ExternalAgent
  trust authenticated_but_untrusted
  may:
    request capability
  may_not:
    retrieve raw records
    decide policy

data_class payment.method_reference
  domain payment
  sensitivity high
  allowed_disclosure:
    masked_value

capability return_payment_method
  purpose:
    return masked payment method

  data:
    requires payment.method_reference

  disclosure:
    mode masked_value
    forbidden raw_payment_credential

  policy:
    allow if agent_has_capability
    require_approval if action_authorizes_payment
    deny if requests_raw_payment_credential

  broker:
    may_decrypt payment.method_reference
    may_return masked_value

  audit:
    record returned_payment_method
